syntax ="proto3";

option csharp_namespace="Proto.Data";
package Proto.Data;

message LoginRequest{
int32 ID=1;
string name=2;
}
message LoginRespond{
int32 ID=1;
string name=2;
}
