syntax ="proto3";

option csharp_namespace="Proto.Data";

import "google/protobuf/any.proto";

message Server2ClientData{
int32 commandID=1;
google.protobuf.Any data=2;
}
